# Shreembo-Backend

./: .dockerignore  .gitignore  Dockerfile  README.md  check_rpc.py  clean_schema.sql  document_repository_schema.sql  enterprise_schema.sql  output.md  pyproject.toml  requirements.txt  test.py  test_branches.py  test_chunking.py  update_branches_schema.sql
.claude/: settings.local.json
backups/20251227_181629/: .env.backup
migrations/: 001_add_invitations_table.sql  002_add_personal_subscription_fields.sql  add_chat_context_nodes.sql  add_email_accounts.sql  add_email_issue_scans.sql  add_meetings_tables.sql  add_message_attachments.sql  add_usage_limits.sql  add_user_access_controls.sql  chat_schema.sql  fix_node_permissions_constraint.sql  update_session_documents_schema.sql
qdrant_data/: meta.json
scripts/: create_super_admin.py
src/: config.py  dependencies.py  main.py
src/access/: __init__.py  folder_access.py  folder_checks.py  group.py  group_delete.py  group_members.py  group_readwrite.py  limit.py  limit_crud.py  limit_rate_daily.py  limit_stats.py  limit_tokens.py  permission.py  permission_checks.py  permission_overrides.py  subscription.py
src/admin/: __init__.py  branch_assignments.py  branches_read.py  branches_write.py  invitation_resend.py  invitations.py  roles.py  roles_admin.py  roles_read.py  roles_write.py  service.py  user_roles.py  users.py
src/audit/: __init__.py  service.py
src/auth/: create_organization.py  current_user.py  invite_accept.py  invite_verify.py  login.py  organizations.py  service.py  (+1 more)
tests/: test_chat_service.py
(+151 files in other folders)
